codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
assertion_line: 1225
expression: exec_blob
---
• Ran sleep 1 (exit 1)
  └ (no output)
