codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__process_wait_input_release_and_cancel.snap
---
source: tui/src/chatwidget/tests/process_wait.rs
expression: completed
---
• Waited 2m 13s · interrupted by input · make test (process p4)

• Waited 9s · wait cancelled · make lint (process p5)
