codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__process_wait_interrupted_turn_cleanup.snap
---
source: tui/src/chatwidget/tests/process_wait.rs
assertion_line: 336
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 100))"
---
  1 background terminal running · /ps to view · /stop to close


› Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project
