codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__process_wait_one_exits_other_active.snap
---
source: tui/src/chatwidget/tests/process_wait.rs
expression: remaining
---
• Waiting for timed process result (12s left • esc to interrupt) · 1 background terminal running · …
  └ Timed · cargo test · process p2 · wait w2


› Ask Codex to do anything

  GPT-5.6-Sol default · /tmp/project
